--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-    <title>ITF website</title>
-    </head>
-    <body>
-        <h1>
-            นาย ศุภวัฒน์ อุสาห์นนท์
-        </h1>
-        <p>ต้ม</p>
-        <br>
-        <br>
-        <h2>มุข</h2>
-        <p>ข้างขึ้น คือ 15 ค่ำ ข้างแรม คืออะไร?</p>
-        <p>เฉลย : CPU</p>
-        <img src="ram.jpg">
-        <p>ผึ้งที่ไว้ใช้เสียบกับคอมพิวเตอร์ มาจากประเทศอะไร</p>
-        <p>เฉลย : USB(US Bee)</p>
-        <img src="bee.jpg">
-        <a href="https://www.fandom.com/">ลิงที่ชอบ</a>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hello</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <img src="img/life/life2.jpg" height="600" width="600" />
+            </div>
+            <div class="col-xl-3">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <img src="img/life/life3.jpg" height="200" width="300" />
+                    </div>
+                    <div class="col-xl-12">
+                        <img src="img/life/life4.jpg" height="200" width="300" />
+                    </div>
+                    <div class="col-xl-12">
+                        <img src="img/life/life9.jpg" height="200" width="300" />
+                    </div>
+                </div>
+            </div> <!-- Close Collumn 2 -->
+            <div class="col-xl-3">
+                <div class="col-xl-12">
+                    <img src="img/life/life5.jpg" height="400" width="300" />
+                </div>
+                <div class="col-xl-12">
+                    <img src="img/life/life7.jpg" height="200" width="300" />
+                </div>
+            </div> <!-- Close Collumn 3 -->
+        </div> <!-- Close Row 1 -->
+    </div> <!-- Close container -->
+</body>
 </html>
